Examples/AScode/Js/Functions/Functions37585.js
// Define function `multiply` that returns a * b
function multiply(a, b) {
  let res = a * b; 
  return res;
  
}
console.log(res)
// ReferenceError: Can't find variable: res

